gke-deployment-filestore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hunyuan3d-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hunyuan3d
  template:
    metadata:
      annotations:
      labels:
        app: hunyuan3d
    spec:
      serviceAccountName: hunyuan3d-sa
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-l4
      volumes:
      - name: nfs-pvc-volume
        persistentVolumeClaim:
          claimName: nfs-pvc
      containers:
      - name: hunyuan3d
        image: europe-west3-docker.pkg.dev/dn-demos/random-demos/h3d:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /status/0
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 8
            memory: 32Gi
            ephemeral-storage: 10Gi
          limits:
            nvidia.com/gpu: "1"
        volumeMounts:
        - name: nfs-pvc-volume
          mountPath: /root
---
apiVersion: v1
kind: Service
metadata:
  name: hunyuan3d-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: hunyuan3d
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hunyuan3d-ingress
  annotations:
    networking.gke.io/managed-certificates: genai3d-subdomain-cert
spec:
  rules:
  - host: genai3d.nikolaidan.demo.altostrat.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hunyuan3d-service
            port:
              number: 80
